beginning of genetic

--- a/c++src/src/Makefile
+++ b/c++src/src/Makefile
@@ -11,8 +11,8 @@ endif
 
 all: hot
 
-hot: main.o utilities.gch page.gch edge.gch node.gch deterministic.o edgeswap.o nodeswap.o kpmp_instance.o kpmp_solution_writer.o
-	g++ -std=c++11 main.o deterministic.o edgeswap.o nodeswap.o kpmp_instance.o kpmp_solution_writer.o -o hot
+hot: main.o utilities.gch page.gch edge.gch node.gch deterministic.o edgeswap.o nodeswap.o genetic.o solution.gch kpmp_instance.o kpmp_solution_writer.o
+	g++ -std=c++11 main.o deterministic.o edgeswap.o nodeswap.o genetic.o kpmp_instance.o kpmp_solution_writer.o -o hot
 
 main.o: main.cpp
 	g++ -std=c++11 -c main.cpp
@@ -27,7 +27,10 @@ page.gch: page.h edge.h
 	g++ -std=c++11 -c page.h
 
 node.gch: node.h
-		g++ -std=c++11 -c node.h
+	g++ -std=c++11 -c node.h
+
+solution.gch: solution.h edge.h node.h
+	g++ -std=c++11 -c solution.h
 
 deterministic.o: deterministic.cpp deterministic.h
 	g++ -std=c++11 -c deterministic.cpp
@@ -37,6 +40,9 @@ edgeswap.o: edgeswap.cpp edgeswap.h utilities.h
 
 nodeswap.o: nodeswap.cpp nodeswap.h utilities.h
 	g++ -std=c++11 -c nodeswap.cpp
+
+genetic.o: genetic.cpp genetic.h deterministic.h deterministic.cpp node.h edge.h page.h
+	g++ -std=c++11 -c genetic.cpp
 
 kpmp_instance.o: kpmp_instance.cpp kpmp_instance.h
 	g++ -std=c++11 -c kpmp_instance.cpp
